help3xsl/default.css
/* ... */
[data-tooltip]:hover:before, [data-tooltip]:hover:after {
    opacity: 1;
    pointer-events: auto;
}
body {
    background-color: var(--background-color);
    margin: 0;
    line-height: normal;
}
::selection {
    background: #FFEB9F;
}
a {
    text-decoration-color: rgba(0,0,0,0.15);
    color: #0461e0;
}
a:hover {
    text-decoration: underline;
    color: #023a86;
}
a:visited {
    color: #633363;
}
pre,
.code,
.codeintable,
.example,
.exampleintable,
.literal,
.literalintable,
.path,
.pathintable {
    background-color: rgba(0,0,0,0.04);
    border-radius: 2px;
    display: inline;
    padding: 1px 3px;
    font-family: var(--font_mono);
    word-wrap: anywhere;
}
.literal {
    white-space: normal;
}
.smathcode {
    border-radius: 2px;
    padding: 1px 3px;
    font-family: var(--font_mono);
}
.acronym {
    font-weight: bold;
}
.related {
    font-weight: bold;
    margin-top: 1.67rem;
    border-top: 1px solid black;
}
.emph,
.menuitem {
    font-weight: bold;
}
.keycode {
    font-family: var(--font_mono);
}
.widget{
    padding: 1px 10px;
    background: #f0f0f0;
    background: linear-gradient(to bottom,#f0f0f0,#fcfcfc);
    border-radius: 3px;
    color: #303030;
    border: 1px solid #a0a0a0;
    border-bottom-width: 2px;
    white-space: nowrap;
}
/* div's for warning, tip and note */
.note,
.tip,
.warning {
    display:flex;
    align-items: center;
    border-radius: 2px;
    box-shadow: 0 2px 5px -3px rgb(0 0 0 / 10%);
    padding: 0.2em;
    margin-top: 15px;
}
.note {
    border-left: 2px solid #309048;
    background-color: #d9f1dd;
}
.tip {
    border-left: 2px solid #0063b1;
    background-color: #cde5f7;
}
.warning {
    border-left: 2px solid #ed8733;
    background-color: #f6f1d2;
}
.noteicon, .notetext {
    padding:0.3em;
}
/* Override some Prism.js styles */
code[class*="language-"], pre[class*="language-"] {
    white-space: pre-wrap;
}

pre[class*="language-"] > code {
    z-index: 0;
}

/* Table related classes */

/* Special case of table with one cell*/
.onecell{
    box-shadow: rgba(0,0,0,0.1) 0px 1px 3px 0px;
    border-bottom: 1px solid #E8E8E8;
}
/* Special case of icon table*/
.icontable {
    display:flex;
    align-items:center;
}
.iconcell {
    padding:0.3em;
}

table {
    background: #FEFEFE;
    box-shadow: rgba(0,0,0,0.08) 0 1px 5px 0;
    border-collapse: collapse;
}
table, th, td {
    border-top: 0;
    border-bottom: 1px solid #E8E8E8;
    border-left: 0;
    border-right: 0;
    padding: 0.3em;
}
html[dir=ltr] th {
    text-align: left;
}
.tablehead,
.tableheadintable {
    font-weight: bold;
    margin-top: 0px;
}
.tableheadcell {
    background: var(--module-color);
    color: white;
    vertical-align:top;
}

.table_font_small {
    font-size: 0.98rem;
}

/* ScriptForge service tables */
.sf_table {
    min-width: 100%;
}
.sf_table thead {
    display: none;
}
.sf_table tr, .sf_table td {
    display: block;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-bottom: 0.67rem;
    color: var(--module-color);
    border-bottom-color: var(--module-color);
}
p,
ol,
td {
    font-size: 1.15rem;
    margin: 2px 0 10px 0;
}
h1 {
    font-size: 1.83rem;
    font-weight: 300;
    border-bottom: 2px solid;
    margin-bottom: 1.67rem;
}
h1 a {
    text-decoration: none;
}
h2 {
    font-size: 1.55rem;
}
h3 {
    font-size: 1.33rem;
}
h4,
h5,
h6 {
    font-size: 1.17rem;
}
.relatedtopics {
    font-weight: normal;
}
.howtoget {
    background: #EBE7E9;
    border-left: 2px solid #4E4B55;
    border-radius: 2px;
    box-shadow: 0 2px 5px -3px rgb(0 0 0 / 10%);
    padding: 0.2em;
    display: flex;
    flex-direction: column;
}
.howtogetheader {
    background: #FFF;
    border-radius: 2px;
    box-shadow: 0 2px 2px -2px rgba(0,0,0,0.2);
    display: inline-block;
    font-weight: bold;
    padding: 0.1em 0.3em;
}
.howtogetbody {
    padding: 0 0.3em;
}
.samplefilesection{
}
.wide {
    width: 100%;
}
.bug {
    color: red;
}
.debug {
    border: 1px solid black;
    padding: 3px;
    display: none;
    background-color: #222;
    color: red;
    text-align: left;
}
.sqlcode,
.pycode,
.bascode {
    border: solid 5px transparent;
    margin-top: 15px;
    margin-bottom: 15px;
}
#DisplayArea {
    background-color: #FCFCFC;
    overflow: auto;
    padding: 10px 10px 40px 10px;
    grid-area: main;
}
#omega-autofocus {
    width: 274px;
}
.mediabutton {
    background-color: cyan;
}
.mediadiv{
    padding-bottom:5%;
    height:0;
    display:inline-block;
    border:none;
}
.screenshot, .genericimage {
    border: .5px solid rgba(0,0,0,.1);
    border-radius: 3px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2em;
    margin-bottom: 2em;
    display:block;
    box-shadow: rgba(0,0,0,0.08) 0 1px 5px 0;
}
.iconimage {}

.switch,
.switchinline {}

.embedded {}
#TopLeftHeader {
    background: var(--module-color);
    grid-area: header;
    position: sticky;
    top: 0px;
    color: #fff;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    z-index: 100;
}
.dropdowns {
    /* allow for scrolling */
    overflow-x: auto;
    overflow-y: hidden;
    /* make it smooth on iOS */
    -webkit-overflow-scrolling: touch;
    grid-area: dropdowns;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    width: 100%;
}
.symbol, .logo, .logo:hover, .logo:visited {
    color: #fff;
    text-decoration: none;
}
.logo p {
    font-size: 24px;
}
.symbol {
    grid-area: symbol;
    padding: 8px 8px 8px 20px;
}
.symbol div {
    background-image: url(media/navigation/libo-symbol-white.svg);
    background-repeat: no-repeat;
    background-size: contain;
    width: 52px;
    height: 60px;
}

[data-a11y-toggle]:not([aria-controls]) {
  display: none;
}
/* You Tube matters */
.youtube_placeholder{
    border: 1px dashed #eee;
    max-width:700px;
    padding: 10px;
    background-color: var(--background-color);
    text-align: center;
}
/* ... */

